# fava-management

./: .gitignore  Dockerfile  README.md  child.py  docker-compose.yml  gen_secret_key.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: auto-upgrade.yaml  build-docker.yaml
docker/: prestart.sh
management/: settings.py  urls.py  wsgi.py
proxy/: process.py  views.py
templates/admin/: index.html
